--- a/MODULO 02/desafio012/estilo/style.css
+++ b/MODULO 02/desafio012/estilo/style.css
@@ -1,11 +1,21 @@
 @charset "utf-8";
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+:root{
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
 *{
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
 }
 html, body{
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--fonte1);
 }
 header {
     background-color: black;
@@ -16,6 +26,8 @@ header > h1{
     padding-top: 50px;
     font-variant: small-caps;
     /*text-transform: uppercase; transfoma tudo em maiusculo*/
+    font-family: var(--fonte2);
+    font-size: 10vw;
 }
 header > p{
     padding-bottom: 50px;
@@ -33,6 +45,11 @@ section{
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 3.5vw;
+}
+section >p {
+    padding-bottom: 2em;
 }
 section.normal{
     background-color: white;
@@ -41,10 +58,23 @@ section.normal{
 section.imagem{
 background-color: rgb(94, 94, 94);
 color: white;
+box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.596);
+background-attachment: fixed;
 }
 section.imagem > p{
-    width: 400px;
-    background-color: rgba(0, 0, 0, 0.363);
+    display: inline-block;
+    padding: 7px;
+    background-color: rgba(0, 0, 0, 0.397);
+    text-shadow: 1px 1px 0px black;
+}
+section#img1{
+background-image: url('../imagens/background001.jpg');
+background-position: right, center;
+background-size: cover;
+}
+section#img2{
+background-image: url('../imagens/background002.jpg');
+background-size: cover;
 }
 footer{
     background-color: black;
